--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "author": "Vikas [R625638]",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.16.2",
     "babel-preset-env": "1.6.0",
     "babel-register": "6.26.0",
     "dotenv": "4.0.0",
+    "jsonwebtoken": "7.4.3",
     "koa": "2.3.0",
+    "koa-bodyparser": "4.2.0",
     "koa-logger": "3.0.1",
     "koa-router": "7.2.1",
     "koa-static": "4.0.1",
     "material-ui": "0.19.0",
+    "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-tap-event-plugin": "2.0.1"
